app/assets/stylesheets/application.css.scss
@import 'foundation_and_overrides';
@import 'common';
@import 'jquery/cupertino/jquery-ui-1.8.24.custom';
@import 'font-awesome';
@import 'foundation-icons';
@import 'dataTables/jquery.dataTables.foundation';
@import 'dataTables/extras/dataTables.tableTools';

.strike {
    text-decoration: line-through;
}

.hint {
  display:inline-block;
  color: gray;
  float:right;
  margin-top: -12px;
  font-size: 50%;
}

label.boolean + span.hint {
  margin-top: -1.6em;
}

form > .vertical-center {
  padding-top: .5em;
}

.dataTable tbody tr td .button {
  margin-top: 1em;
}

.dataTables_processing {
  min-height:1em;
  vertical-align: middle;
  margin-top: -.9em;
  margin-left:auto;
  margin-right:auto;
  display:block

}

select {
    height: auto;
}

select[size], select[multiple] {
    background-image: none;
}


#performance_restricted_payment_type_ids {
  height: 6em;
}

.button.remove {
  margin-top: 1em;
}

#quick-lookup {
  font-size: .5em;
}
.quick-lookup-history {
  color: gray;
  font-family: italic;
  font: {
    family: italic;
  }
}

#quick-lookup h5 {
  font-size: .6em;
  color: gray;
}

